--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,37 @@
       <div class="container">
 
           <h1>Hello, world!</h1>
+          <div class="mb-3 row">
+            <form method="post">
+                <label for="title">image </label>
+                <br>
+                <input type="text" name="image"
+                      placeholder="image"
+                      value="{{ request.form['image'] }}"></input>
+                <br>
+                <label for="title">name </label>
+                <br>
+                <input type="text" name="name"
+                      placeholder="full names"
+                      value="{{ request.form['name'] }}"></input>
+                <br>
+                <label for="title">email </label>
+                <br>
+                <input type="text" name="email"
+                      placeholder="email"
+                      value="{{ request.form['email'] }}"></input>
+                <br>
+                <select class="form-select" aria-label="Default select example" name="department">
+                  <option selected>Departments</option>
+                  <option value="1">One</option>
+                  <option value="2">Two</option>
+                  <option value="3">Three</option>
+                </select>
+
+                <br>
+                <button type="submit">Submit</button>
+    </form>
+          </div>
           
           <!-- {{ name }} -->
           
