--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,37 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="#">Hidden brand</a>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </div>
       <div class="container">
+        {% for message in get_flashed_messages() %}
+         <div class="alert">{{ message }}</div>
+        {% endfor %}
 
           <h1>Hello, world!</h1>
           <div class="mb-3 row">
@@ -36,17 +66,15 @@
                 <br>
                 <select class="form-select" aria-label="Default select example" name="department">
                   <option selected>Departments</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
+                  <option value="1">sales</option>
+                  <option value="2">Engineering</option>
+                  <option value="3">Finance</option>
                 </select>
 
                 <br>
                 <button type="submit">Submit</button>
     </form>
           </div>
-          
-          <!-- {{ name }} -->
           
           {% for emp in all %}
           <div class="card mb-3" style="max-width: 540px;">
