--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,8 @@
 
           <h1>Hello, world!</h1>
           <div class="mb-3 row">
-            <form method="post">
-                <label for="title">image </label>
+            <form method="post" action="/">
+              <label for="title">image </label>
                 <br>
                 <input type="text" name="image"
                       placeholder="image"
@@ -73,11 +73,14 @@
 
                 <br>
                 <button type="submit">Submit</button>
-    </form>
+
+             
+            </form>
           </div>
-          
+
+          <div class="row">          
           {% for emp in all %}
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 mx-5 my-3" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="{{emp[1]}}" class="img-fluid rounded-start" alt="...">
@@ -94,7 +97,8 @@
             </div>
           </div>
         {% endfor %}
-            
+      </div>
+
     </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
